# FolderCrawler

./: Cargo.toml  Package.swift  README.md
FilesFinder/: classImpl.cpp
FilesFinder/include/: classImpl.h  module.modulemap
Sources/FolderCrawler/: FileSize.swift  Folder.swift  FolderCrawler.swift  extension.swift
src/: errors.rs  file_size.rs  folder.rs  folder_crawler.rs  main.rs
