[package]
name = "FolderCrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
structopt = "0.3"
rayon = "1.6.0"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
futures = "0.3.25"
